--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,9 @@
-#services:
+services:
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: library
+    ports:
+      - "5432:5432"
